--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/breaker-style-one.css">
+    <link rel="stylesheet" href="css/color-red-own.css">
     <!--main css file-->
     <script src="js/gasp.min.js"></script>
 </head>
@@ -46,7 +48,7 @@
             <div class="navigation-links">
                 <a href="#" data-text="HOME" id="home-link" >HOME</a>
                 <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <a href="#" data-text="BLOG" id="blog-link" >BLOG</a>
+                <!--<a href="#" data-text="BLOG" id="blog-link" >BLOG</a>-->
                 <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
                 <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
             </div>
@@ -77,7 +79,7 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Panter </span>Soft</div>
+                <div class="firstline"><span class="color">Panter</span>Soft</div>
                 <div class="secondline">
                 I'm a
             <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Developer."]'></span>
@@ -140,14 +142,14 @@
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm creative
+                    I'm a
                     <span class="color">Developer</span>
                      based in Tuttlingen , Germany </span>
                      <br>
-               <span class="about-second-line"> With 20 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
-               <div class="cv">
+               <span class="about-second-line"> At the moment i am studying applied computer science at HTWG Konstanz 🏛️. In addition to my aspired Degree I am Head of Department for Autonomous Driving at Bodensee Racing Team 🏎</span>
+               <!--<div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
-            </div>
+            </div>-->
             </div>
             <!--about picture-->
             <div class="about-img">
@@ -190,7 +192,7 @@
                     </div>
             <!--services header-->
                     <div class="services-heading wow">
-                        <span class="color">My</span> Services
+                        <span class="color">My Core</span> Competence
                     </div>
             <!--services header end-->
             <!--services content-->
@@ -238,7 +240,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="html-progress wow">10%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -248,47 +250,47 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">90%</div>
+                 <div class="js-progress wow">5%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        Adobe Ps
+                        Python
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="adobe-progress wow">83%</div>
+                 <div class="adobe-progress wow">30%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        PHP
+                        C
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="php-progress wow">87%</div>
+                 <div class="php-progress wow">60%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        JQuery
+                        Java
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">94%</div>
+                 <div class="jquery-progress wow">20%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        SEO
+                        Scala
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
+                 <div class="seo-progress wow">40%</div>
                     </div>
                     </div>
                 </div>
@@ -334,7 +336,7 @@
                     </div>
                 </div>
                 </div>
-            <div class="portfolio-header"> <span class="color"> My </span> Portfolio
+            <div class="portfolio-header"> <span class="color"> My </span> Portfolio (Coming Soon)
             <span class ="header-caption"> Some Of My <span class="color"> Works</span></span></div>
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
@@ -353,7 +355,7 @@
                         <img src="images/portfolio-second.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Web Designing</h2>
+                        <h2>Web Design</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad laudantium suscipit
                              voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
@@ -365,7 +367,7 @@
                         <img src="images/portfolio-third.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
+                        <h2>UI Design</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate expedita eius dignissimos
                             .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
@@ -561,7 +563,7 @@
                     </div>
                     <input type="text" id="subject" placeholder="subject" class="input-subject">
                     <textarea id ="body" class="input-textarea" placeholder="message"></textarea>
-                    <button type="button" id ="submit" value="send">Submit</button>
+                    <button type="button" id ="submit" value="send">Submit (not working at the moment)</button>
                  </form>
 
              </div>
