repaired broken git

--- a/themes/index-clean.html
+++ b/themes/index-clean.html
@@ -7,14 +7,16 @@
     <meta name="description" content="PanterSofts - Personal Portfolio Website" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="PanterSoft" />
-    <title>PanterSofts - Personal Portfolio Website Template</title>
+    <title>PanterSofts - Personal Portfolio Website</title>
   <!--favicon-img-->
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/breaker-style-one.css">
+    <link rel="stylesheet" href="css/color-red-own.css">
     <!--main css file-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+    <script src="js/gasp.min.js"></script>
 </head>
 <body>
     <!--contains all the div-->
@@ -24,7 +26,7 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Arlo</span>Brown
+            <span class="color">Nico</span>Mattes
         </div>
     <!--loader-end-->
     <!--link-screen-->
@@ -37,7 +39,7 @@
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
             <div class="logo">
-                <img src="images/willy wonka logo.png" alt="logo">
+                <img src="images/Pantersoft-logo-bw.png" alt="logo">
             </div>
             <div class="navigation-close">
                 <span class="close-first"></span>
@@ -46,7 +48,7 @@
             <div class="navigation-links">
                 <a href="#" data-text="HOME" id="home-link" >HOME</a>
                 <a href="#" data-text="ABOUT" id="about-link" >ABOUT</a>
-                <a href="#" data-text="BLOG" id="blog-link" >BLOG</a>
+                <!--<a href="#" data-text="BLOG" id="blog-link" >BLOG</a>-->
                 <a href="#" data-text="PORTFOLIO" id="portfolio-link" >PORTFOLIO</a>
                 <a href="#" data-text="CONTACT" id="contact-link" >CONTACT</a>
             </div>
@@ -55,7 +57,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img src="images/willy wonka logo.png" alt="logo">
+            <img src="images/Pantersoft-logo.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -68,30 +70,30 @@
             <div id="particles"></div>
               <!--Social Media Links-->
             <div class="social-media-links">
-               <a href="#"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
-                <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
-                <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
+               <a href="https://github.com/PanterSoft"><img src="images/github-logo.png" class="social-media" alt="github-logo"></a><!--Your instagram homepage link inser in place of "#"-->
+               <a href="https://www.linkedin.com/in/mattes-nico-807b9a251/"><img src="images/linkedin-logo.png" class="social-media" alt="linkedin-logo"></a>
+                <!--<a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
+                <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>-->
 
             </div>
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Arlo </span>Brown</div>
+                <div class="firstline"><span class="color">Panter</span>Soft</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Blogger.", " Freelancer." ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Developer."]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
-                <a href="Mailto:#"><img src="images/mail.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
-                <a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a><!--Your telephone number Id write in place of "#"-->
+                <a href="Mailto:mattesnico@gmail.com"><img src="images/mail-logo.png" alt="email-pic" class="contactpic"></a><!--Your email Id write in place of "#"-->
+                <!--<a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a>-->
                     </div>
             </div>
             </div>
             <!--header image-->
             <div class="header-image">
-            <img src="images/man.jpg" alt="logo">
+            <img src="images/Pantersoft-banner-won.png" alt="logo">
             </div>
             <!--header image end-->
         </div>
@@ -140,14 +142,14 @@
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm creative
-                    <span class="color">web developer</span>
-                     based in New York , USA </span>
+                    I'm a
+                    <span class="color">Developer</span>
+                     based in Tuttlingen , Germany </span>
                      <br>
-               <span class="about-second-line"> With 20 years of experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step while working.</span>
-               <div class="cv">
+               <span class="about-second-line"> At the moment i am studying applied computer science at HTWG Konstanz 🏛️. In addition to my aspired Degree I am Head of Department for Autonomous Driving at Bodensee Racing Team 🏎</span>
+               <!--<div class="cv">
                 <a href="#"><button>Download <span class="colors">CV</span></button></a>
-            </div>
+            </div>-->
             </div>
             <!--about picture-->
             <div class="about-img">
@@ -190,7 +192,7 @@
                     </div>
             <!--services header-->
                     <div class="services-heading wow">
-                        <span class="color">My</span> Services
+                        <span class="color">My Core</span> Competence
                     </div>
             <!--services header end-->
             <!--services content-->
@@ -238,7 +240,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="html-progress wow">95%</div>
+                 <div class="html-progress wow">10%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -248,47 +250,47 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="js-progress wow">90%</div>
+                 <div class="js-progress wow">5%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        Adobe Ps
+                        Python
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="adobe-progress wow">83%</div>
+                 <div class="adobe-progress wow">30%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        PHP
+                        C
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="php-progress wow">87%</div>
+                 <div class="php-progress wow">60%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        JQuery
+                        Java
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">94%</div>
+                 <div class="jquery-progress wow">20%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        SEO
+                        Scala
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
+                 <div class="seo-progress wow">40%</div>
                     </div>
                     </div>
                 </div>
@@ -296,7 +298,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> PanterSoft
              </div>
             </div>
     <!--copyright-section-->
@@ -334,7 +336,7 @@
                     </div>
                 </div>
                 </div>
-            <div class="portfolio-header"> <span class="color"> My </span> Portfolio
+            <div class="portfolio-header"> <span class="color"> My </span> Portfolio (Coming Soon)
             <span class ="header-caption"> Some Of My <span class="color"> Works</span></span></div>
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
@@ -353,7 +355,7 @@
                         <img src="images/portfolio-second.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Web Designing</h2>
+                        <h2>Web Design</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id cumque placeat minima ad laudantium suscipit
                              voluptatem ducimus. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
@@ -365,7 +367,7 @@
                         <img src="images/portfolio-third.jpg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>UI Designing</h2>
+                        <h2>UI Design</h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate expedita eius dignissimos
                             .. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
@@ -386,7 +388,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> PanterSoft
                 </div>
                </div>
        <!--copyright-section-->
@@ -430,7 +432,7 @@
                  <div class="blogs">
                      <a href="#">
                      <div class="img">
-                         <img src="images/post-one.jpg" alt="blog-one">
+                        <img src="images/post-one.jpg" alt="blog-one">
                         <div class="blog-date">8 May,20</div>
                      </div>
                      <div class="blog-text">
@@ -508,7 +510,7 @@
                <!--copyright-section You Can Remove After Downloading-->
                <div class="footer">
                 <div class="footer-text">
-                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                    <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> PanterSoft
                 </div>
                </div>
        <!--copyright-section-->
@@ -561,7 +563,7 @@
                     </div>
                     <input type="text" id="subject" placeholder="subject" class="input-subject">
                     <textarea id ="body" class="input-textarea" placeholder="message"></textarea>
-                    <button type="button" id ="submit" value="send">Submit</button>
+                    <button type="button" id ="submit" value="send">Submit (not working at the moment)</button>
                  </form>
 
              </div>
@@ -576,29 +578,29 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <p>Nico Mattes</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
                   <img src="./images/icon-location.png" class="icon" alt="location-icon">
                   <div class="contact-info-icon-text">
                       <h6>Location</h6>
-                      <p>New York, USA</p>
+                      <p>Tuttlingen, Germany</p>
                 </div>
               </div>
-              <div class="contect-info-content-line">
+              <!--<div class="contect-info-content-line">
                   <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
                   <div class="contact-info-icon-text">
                       <h6>Call</h6>
                       <p>+9865376531</p>
                 </div>
-              </div>
+              </div>-->
 
               <div class="contect-info-content-line">
                   <img src="./images/icon-email.png" class="icon" alt="email-icon">
                   <div class="contact-info-icon-text">
                       <h6>Email</h6>
-                      <p>Info@example.com</p>
+                      <p>mattesnico@gmail.com</p>
                 </div>
               </div>
                 </div>
@@ -608,7 +610,7 @@
                     <!--copyright-section You Can Remove After Downloading-->
                     <div class="footer">
                         <div class="footer-text">
-                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                            <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> PanterSoft
                         </div>
                        </div>
                <!--copyright-section-->
