--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="PanterSofts - Personal Portfolio Website" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="PanterSoft" />
-    <title>PanterSofts - Personal Portfolio Website</title>
+    <title>PanterSofts - Personal Website</title>
   <!--favicon-img-->
-   <link rel="icon" type="image/png" href="images/favicon.png">
+   <link rel="icon" type="image/png" href="images\Pantersoft-logo-bw.png"><!--"images/favicon.png"> -->
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
@@ -82,7 +82,7 @@
                 <div class="firstline"><span class="color">Panter</span>Soft</div>
                 <div class="secondline">
                 I'm a
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Designer.", " Developer."]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Developer.", " Creator."]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
@@ -142,7 +142,7 @@
             <div class="about-first-paragraph wow">
             <!--about description-->
                <span class="about-first-line">
-                    I'm a
+                    Hi, I am <span class="color">Nico Mattes</span> a
                     <span class="color">Developer</span>
                      based in Tuttlingen , Germany </span>
                      <br>
@@ -202,7 +202,7 @@
                                <img src="images/coding.png" alt="service-one">
                                </div>
                                <div class="service-description">
-                                <h2>Web Designing</h2>
+                                <h2>Robotics</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
                            </div>
@@ -211,7 +211,7 @@
                                <img src="images/instagram.png" alt="service-two">
                                </div>
                                <div class="service-description">
-                                <h2>Social Media</h2>
+                                <h2>Electrical Engineering</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                                </div>
                            </div>
@@ -220,7 +220,7 @@
                                <img src="images/bulb.png" alt="service-three">
                             </div>
                             <div class="service-description">
-                                <h2>Creative Design</h2>
+                                <h2>Programming</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quibusdam possimus</p>
                             </div>
                         </div>
@@ -236,31 +236,21 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        HTML/CSS
-                    </div>
-                        </div>
-                    <div class="html-prog wow prog">
-                 <div class="html-progress wow">10%</div>
-                    </div>
-                    </div>
-                    <div class="skill-html skill">
-                        <div class="skill-text">
-                    <div class="html">
-                      Javascript
-                    </div>
-                        </div>
-                    <div class="html-prog wow prog">
-                 <div class="js-progress wow">5%</div>
-                    </div>
-                    </div>
-                    <div class="skill-html skill">
-                        <div class="skill-text">
-                    <div class="html">
                         Python
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="adobe-progress wow">30%</div>
+                 <div class="html-progress wow">60%</div>
+                    </div>
+                    </div>
+                    <div class="skill-html skill">
+                        <div class="skill-text">
+                    <div class="html">
+                      C++
+                    </div>
+                        </div>
+                    <div class="html-prog wow prog">
+                 <div class="js-progress wow">20%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -270,7 +260,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="php-progress wow">60%</div>
+                 <div class="adobe-progress wow">5%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -280,7 +270,17 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="jquery-progress wow">20%</div>
+                 <div class="php-progress wow">2%</div>
+                    </div>
+                    </div>
+                    <div class="skill-html skill">
+                        <div class="skill-text">
+                    <div class="html">
+                        Bash
+                    </div>
+                        </div>
+                    <div class="html-prog wow prog">
+                 <div class="jquery-progress wow">10%</div>
                     </div>
                     </div>
                     <div class="skill-html skill">
@@ -290,7 +290,7 @@
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">40%</div>
+                 <div class="seo-progress wow">3%</div>
                     </div>
                     </div>
                 </div>
