--- a/index-particle.html
+++ b/index-particle.html
@@ -578,7 +578,7 @@
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
                         <h6>Name</h6>
-                        <p>Nico Mattes</p>
+                        <p>Nico</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
