--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="description" content="Nico - Developer & Creator | Robotics, Electrical Engineering, and Programming Specialist">
     <meta name="keywords" content="developer, robotics, electrical engineering, programming, portfolio, software engineer, autonomous driving, HTWG Konstanz">
     <meta name="author" content="Nico - PanterSoft">
-    <title>Nico | Developer & Creator</title>
+    <title>PanterSoft</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/PanterSoft_Logo_Round.png">
+    <link rel="shortcut icon" type="image/png" href="images/PanterSoft_Logo_Round.png">
+    <link rel="apple-touch-icon" href="images/PanterSoft_Logo_Round.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,7 +81,7 @@
                     <a href="mailto:mattesnico@gmail.com" aria-label="Email">
                         <img src="images/mail-logo.png" alt="Email" class="social-icon">
                     </a>
-        </div>
+                </div>
             </div>
             <div class="hero-image">
                 <div class="image-wrapper">
