Updated Contact Form now also works

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     </div>
                     <h3 class="skill-title" data-i18n="skills.programming.title">Programming</h3>
                     <p class="skill-description" data-i18n="skills.programming.description">
-                        Proficient in Python, C++, Java, and more. Building scalable software
+                        Proficient in Python, C, C++, Bash, C#, and more. Building scalable software
                         solutions and innovative applications.
                     </p>
                                </div>
@@ -192,55 +192,46 @@
                     <div class="progress-item">
                         <div class="progress-header">
                             <span class="progress-label">Python</span>
-                            <span class="progress-percent">60%</span>
+                            <span class="progress-percent">70%</span>
                                </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" data-progress="60"></div>
+                            <div class="progress-fill" data-progress="70"></div>
                         </div>
-                    </div>
-                    <div class="progress-item">
-                        <div class="progress-header">
-                            <span class="progress-label">C++</span>
-                            <span class="progress-percent">20%</span>
-                        </div>
-                        <div class="progress-bar">
-                            <div class="progress-fill" data-progress="20"></div>
-                    </div>
                     </div>
                     <div class="progress-item">
                         <div class="progress-header">
                             <span class="progress-label">C</span>
-                            <span class="progress-percent">5%</span>
+                            <span class="progress-percent">40%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" data-progress="5"></div>
+                            <div class="progress-fill" data-progress="40"></div>
                     </div>
                     </div>
                     <div class="progress-item">
                         <div class="progress-header">
-                            <span class="progress-label">Java</span>
-                            <span class="progress-percent">2%</span>
+                            <span class="progress-label">C++</span>
+                            <span class="progress-percent">50%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" data-progress="2"></div>
+                            <div class="progress-fill" data-progress="50"></div>
                     </div>
                     </div>
                     <div class="progress-item">
                         <div class="progress-header">
                             <span class="progress-label">Bash</span>
-                            <span class="progress-percent">10%</span>
+                            <span class="progress-percent">35%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" data-progress="10"></div>
+                            <div class="progress-fill" data-progress="35"></div>
                     </div>
                     </div>
                     <div class="progress-item">
                         <div class="progress-header">
-                            <span class="progress-label">Scala</span>
-                            <span class="progress-percent">3%</span>
+                            <span class="progress-label">C#</span>
+                            <span class="progress-percent">30%</span>
                         </div>
                         <div class="progress-bar">
-                            <div class="progress-fill" data-progress="3"></div>
+                            <div class="progress-fill" data-progress="30"></div>
                     </div>
                     </div>
                 </div>
@@ -394,6 +385,7 @@
     <!-- Scripts -->
     <script src="js/particles.min.js"></script>
     <script src="js/translations.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
