--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
     <script src="js/particles.min.js"></script>
     <script src="js/translations.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script src="js/emailjs.config.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
