Added Full name in Contact Section and optimized workflow

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar" id="navbar">
         <div class="nav-container">
             <a href="#home" class="nav-logo">
-                <img src="images/PanterSoft_Logo.png" alt="PanterSoft Logo" class="logo-img">
+                <img src="images/PanterSoft_Logo_Round.png" alt="PanterSoft Logo" class="logo-img">
             </a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
                 <span></span>
@@ -324,7 +324,7 @@
                             <img src="images/icon-name.png" alt="Name" class="contact-icon">
                             <div class="contact-text">
                                 <h4 data-i18n="contact.name">Name</h4>
-                                <p>Nico</p>
+                                <p>Nico Mattes</p>
                 </div>
                </div>
                         <div class="contact-item">
