updated my projects

--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="Autonomous Driving System" class="portfolio-img">
+                        <img src="images/portfolio-first.jpg" alt="TheSourceInstaller" class="portfolio-img">
                         <div class="portfolio-overlay">
                             <div class="portfolio-content">
-                                <h3 class="portfolio-title" data-i18n="portfolio.project1.title">Autonomous Driving System</h3>
-                                <p class="portfolio-desc" data-i18n="portfolio.project1.description">Advanced autonomous driving solutions for racing applications</p>
-                                <a href="#" class="portfolio-link" data-i18n="portfolio.viewProject">View Project →</a>
+                                <h3 class="portfolio-title" data-i18n="portfolio.project1.title">TheSourceInstaller</h3>
+                                <p class="portfolio-desc" data-i18n="portfolio.project1.description">Distribution-independent source-based package manager built in pure C</p>
+                                <a href="https://github.com/PanterSoft/TheSourceInstaller" target="_blank" rel="noopener noreferrer" class="portfolio-link" data-i18n="portfolio.viewProject">View Project →</a>
         </div>
                 </div>
                     </div>
